# voxel-game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.42bf45a  README.md  api.lua  imgui.ini  init.lua  settings.json  worldgen.lua
engine/: AABB.cpp  AABB.hpp  Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  Frustum.cpp  Frustum.hpp  Input.cpp  Input.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  Primitives.cpp  Primitives.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
lib/AntTweakBar/: CMakeLists.txt
lib/glad/: glad.c
lib/glad/include/glad/: glad.h
lib/glew/: glew.pc
lib/luajit/lib/: libluajit-5.1.so.2
lib/luajit/lib/pkgconfig/: luajit.pc
mods/base/: EntitySkeleton.lua  HudGUI.lua  Inventory.lua  InventoryGUI.lua  MainMenuGUI.lua  PlayerController.lua  api.lua  arrays.lua  class.lua  crafting.lua  gui.lua  init.lua  init_client.lua  item.lua  newGUI.lua  simplex2D.lua  worldgen.lua
mods/base/resources/: skeleton.mtl
mods/base/resources/shaders/: PBR.glsl  blockShader.glsl  bloom.glsl  brdf.glsl  cubemap.glsl  cubemapVertex.glsl  debug.glsl  deferred.glsl  deferred_ambient.glsl  deferred_directional.glsl  deferred_directional_shadow.glsl  deferred_point.glsl  entityShader.glsl  eq2cube.glsl  fog.glsl  fxaa.glsl  gammaCorrect.glsl  gaussianBlur.glsl  irradiance.glsl  item.glsl  lighting.glsl  liquidShader.glsl  passthrough.glsl  postProcessingVertex.glsl  prefilter.glsl  shadow.glsl  shadowMapping.glsl  skybox.glsl  sprite.fsh  sprite.glsl  sprite.vsh  ssao.glsl  ssaoBlur.glsl  standard.glsl  text.fsh  text.glsl  tonemap.glsl
mods/testmod/: init.lua
resources/: blockShader.fsh  blockShader.gsh  blockShader.vsh  blockShaderSimple.fsh  debug.fsh  debug.vsh  generic.fsh  generic.vsh  gui.fsh  gui.vsh  item.fsh  item.vsh  liquidShader.fsh  liquidShader.vsh  player-armor.fbx  player-armor.mtl  shader.fsh  shader.vsh  shadow.fsh  shadow.vsh  skybox.fsh  skybox.vsh
resources/shaders/: bloom.glsl  brdf.glsl  cubemap.fsh  debug.fsh  debug.vsh  deferred.glsl  deferred_ambient.glsl  deferred_directional.glsl  deferred_directional_shadow.glsl  deferred_point.glsl  eq2cube.fsh  fog.glsl  fxaa.glsl  gammaCorrect.glsl  gaussianBlur.glsl  irradiance.fsh  lighting.glsl  particle.fsh  particle.gsh  particle.vsh  passthrough.glsl  prefilter.fsh  shadow.vsh  ssao.glsl  ssaoBlur.glsl  ssr.glsl  standard.fsh  standard.vsh  text.fsh  tonemap.glsl
src/: AABB.cpp  AABB.hpp  Block.cpp  Block.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  ChunkIO.cpp  ChunkIO.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkMesh.cpp  ChunkMesh.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  Client.cpp  Client.hpp  Common.cpp  Common.hpp  Console.cpp  Console.hpp  Framebuffer.cpp  Framebuffer.hpp  Frustum.cpp  Frustum.hpp  Game.cpp  Game.hpp  GuiMain.cpp  GuiMain.hpp  Input.cpp  Input.hpp  ItemRenderer.cpp  ItemRenderer.hpp  LuaAPI.cpp  LuaAPI.hpp  LuaHandler.cpp  LuaHandler.hpp  Material.cpp  Material.hpp  (+68 more)
src/client/: BlockTextureAtlas.cpp  BlockTextureAtlas.hpp  ChunkMesh.cpp  ChunkMesh.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  Client.cpp  Client.hpp  ClientWorld.cpp  ClientWorld.hpp  EntityRenderer.cpp  EntityRenderer.hpp  ItemRenderer.cpp  ItemRenderer.hpp  NetworkManagerClient.cpp  NetworkManagerClient.hpp  Window.cpp  Window.hpp  WorldRenderer.cpp  WorldRenderer.hpp
src/common/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  ChunkNeighborhood.cpp  ChunkNeighborhood.hpp  Entity.cpp  Entity.hpp  LuaHandler.cpp  LuaHandler.hpp  Player.cpp  Player.hpp  World.cpp  World.hpp  WorldGenerator.cpp  WorldGenerator.hpp
src/core/: AABB.cpp  AABB.hpp  Animation.cpp  Animation.hpp  AssimpFile.cpp  AssimpFile.hpp  Bone.cpp  Bone.hpp  Camera.cpp  DebugRenderer.cpp  DebugRenderer.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  Frustum.cpp  Frustum.hpp  GameObject.cpp  GameObject.hpp  GuiRenderer.cpp  GuiRenderer.hpp  IBL.cpp  IBL.hpp  Input.cpp  Material.cpp  Material.hpp  Math.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Path.cpp  Path.hpp  PointLight.cpp  PostProcessing.cpp  PostProcessing.hpp  (+17 more)
src/old/: ChunkIO.hpp  ChunkManager.cpp  ChunkManager.hpp  Client.cpp  Settings.hpp  World.cpp  json.hpp
src/rendering/: Camera.cpp  Camera.hpp  DebugRenderer.cpp  DebugRenderer.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  Frustum.cpp  GuiRenderer.cpp  GuiRenderer.hpp  IBL.cpp  IBL.hpp  IRenderable.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  PointLight.cpp  PointLight.hpp  PostProcessing.cpp  PostProcessing.hpp  Primitives.cpp  Primitives.hpp  Renderer.cpp  Renderer.hpp  Resources.cpp  Resources.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/server/: ChunkIO.cpp  ChunkIO.hpp  NetworkManagerServer.cpp  NetworkManagerServer.hpp  Server.cpp  Server.hpp  ServerWorld.cpp  ServerWorld.hpp
src/util/: AABB.cpp  Input.cpp  Input.hpp  Job.cpp  Job.hpp  Noise.cpp  Packet.cpp  Path.cpp  Path.hpp  Registry.cpp  Registry.hpp  Settings.cpp  Settings.hpp  SimplexNoise.cpp  Stopwatch.hpp
